--- a/classwork/2020-11-14/styles/main.scss
+++ b/classwork/2020-11-14/styles/main.scss
@@ -1,5 +1,4 @@
 .main{
-    width: 100vw;
     max-width: 1920px;
     max-height: 1910px;
     background-color:#FCFCFC;
@@ -12,12 +11,12 @@
 }
 .main > div:nth-child(2){
     width: 100%;
-    min-height: 83px;
+    height: 83px;
     background-color: white;
     margin: 0 auto;
 }
 .wrapper{
-    max-width: 1116px;
+    max-width: 1111px;
     height: 36px;
     margin: 0 auto;
     display: flex;
@@ -35,8 +34,6 @@
         font-size: 14px;
         line-height: 16px;
         color: #4F4F4F;
-    }
-    .contact{
         margin-right: 20px;
     }
 }
@@ -109,7 +106,7 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        top: 70px;
+        top: 100px;
         left: -50px;
         border: 1px solid #E8E8EE;
         background-image: url(../images/arrow-1.png);
@@ -122,7 +119,7 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        top: 70px;
+        top: 100px;
         right: -50px;
         border: 1px solid #E8E8EE;
         background-image: url(../images/arrow-2.png);
@@ -164,12 +161,12 @@
 }
 .line{
     margin: 27px auto;
-    max-width: 1110px;
+    max-width: 1111px;
     height: 1px;
     background-color: #E8E8EE;
 }
 .wrapper-1{
-    max-width: 1116px;
+    max-width: 1111px;
     max-height: 36px;
     background-color: #F2F2F2;
     margin: 0 auto; 
@@ -227,7 +224,7 @@
 }
 .wrapper-2{
     max-width: 1111px;
-    max-height: auto;
+    height: auto;
     margin: 20px auto;
     display: flex;
     flex-wrap: wrap;
@@ -242,7 +239,7 @@
     }
 }
 .wrapper-3{
-    max-width: 1116px;
+    max-width: 1111px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -257,40 +254,7 @@
         line-height: 2.7;
     }
 }
-@media only screen and (min-width: 1111px){
-    .main{
-        max-width: 1111px;
-    }
-}
-@media only screen and (min-width: 1012px){
-    .main{
-        .header > .wrapper > .sub-wrap-2{
-            .search-bar{
-                display: flex;
-            }
-        }
-        & > .wrapper > div{
-            margin: 5px auto;
-            padding: 0;
-        }
-        .wrapper-1{
-            & > div:nth-child(2){
-                display: flex;
-            }
-            & > div:nth-child(3){
-                display: none;
-            }
-        }
-        & > .wrapper-1 > div:nth-child(2){
-            display: flex;
-        }
-        & > .wrapper > div{
-            margin: 5px auto;
-            padding: 0;
-        }
-    }
-}
-@media only screen and (min-width: 360px) and (max-width: 1012px){
+@media only screen and (max-width: 1111px){
     .main {     
         & > .wrapper > div{
             margin: 5px auto;
@@ -314,9 +278,6 @@
             display: none;
         }
         & > .wrapper::after{
-            display: none;
-        }
-        & > .wrapper > div:nth-child(3){
             display: none;
         }
         & > .wrapper-2 > div{
@@ -345,47 +306,34 @@
         & > div{
             min-width: 360px;
         }
-        & > .wrapper > div{
-            margin: 5px auto;
-            padding: 0;
-        }
         & > .wrapper > div:nth-child(3){
             display: none;
         }
-        & > .header > .wrapper > .sub-wrap-2{
-            .menu-pic{
-                min-width: 110px;
-                margin-left: 20px;
-            }
-            .button{
-                margin-right: 10px;
+    }
+}
+@media only screen and (min-width: 1012px){
+    .main{
+        .header > .wrapper > .sub-wrap-2{
+            .search-bar{
+                display: flex;
             }
         }
-        & > .header:nth-child(1) > .wrapper > .sub-wrap-1{
-                .login{
-                    margin-right: 11px;
-                }
+        .wrapper-1{
+            & > div:nth-child(2){
+                display: flex;
             }
-        & > .wrapper::before{
-            display: none;
-        }
-        & > .wrapper::after{
-            display: none;
-        }
-        & > .wrapper-2 > div{
-            margin: 10px auto;
+            & > div:nth-child(3){
+                display: none;
+            }
         }
         & > .wrapper-1 > div:nth-child(2){
-            display: none;
+            display: flex;
         }
-        & > .wrapper-1{ 
-                .icons{
-                    display: flex;
-                    margin-right: 20px;
-                }
-                & > div:first-child{
-                    margin-left: 10px;
-                }
-        }
+    }
+}
+@media only screen and (min-width: 1111px){
+    .main{
+        max-width: 1111px;
+        margin: 0 auto;
     }
 }
