--- a/classwork/2020-11-14/styles/main.css
+++ b/classwork/2020-11-14/styles/main.css
@@ -1,6 +1,6 @@
 .main {
   max-width: 1920px;
-  max-height: 1910px;
+  height: 1910px;
   background-color: #FCFCFC;
   margin: 0 auto;
 }
@@ -375,7 +375,7 @@
 
 @media only screen and (max-width: 1111px) {
   .main > .wrapper > div {
-    margin: 5px auto;
+    margin: 7px auto;
     padding: 0;
   }
   .main > .header > .wrapper > .sub-wrap-2 .menu-pic {
@@ -429,6 +429,10 @@
   }
   .main > .wrapper > div:nth-child(3) {
     display: none;
+  }
+  .main > .wrapper > div {
+    margin: 7px auto;
+    padding: 0;
   }
 }
 
