--- a/classwork/2020-11-16/styles/main.css
+++ b/classwork/2020-11-16/styles/main.css
@@ -1,3 +1,46 @@
+.mainer {
+  height: 1910px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 auto;
+}
+
+.side-bar {
+  width: 60px;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.before {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 190px;
+  left: 10px;
+  border: 1px solid #E8E8EE;
+  background-image: url(../images/arrow-1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 3px;
+}
+
+.after {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 190px;
+  right: 10px;
+  border: 1px solid #E8E8EE;
+  background-image: url(../images/arrow-2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 3px;
+}
+
 .main {
   max-width: 1920px;
   height: 1910px;
@@ -21,6 +64,17 @@
 .wrapper {
   max-width: 1111px;
   height: 36px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.wrapper0 {
+  max-width: 1215px;
+  height: auto;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -146,32 +200,8 @@
   position: relative;
 }
 
-.main > .wrapper:before {
-  content: '';
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  top: 100px;
-  left: -50px;
-  border: 1px solid #E8E8EE;
-  background-image: url(../images/arrow-1.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 3px;
-}
-
-.main > .wrapper:after {
-  content: '';
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  top: 100px;
-  right: -50px;
-  border: 1px solid #E8E8EE;
-  background-image: url(../images/arrow-2.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 3px;
+.main > .wrapper > div:nth-child(3) {
+  display: none;
 }
 
 .main > .wrapper > div {
@@ -373,26 +403,20 @@
   line-height: 2.7;
 }
 
-@media only screen and (max-width: 1111px) {
+@media only screen and (max-width: 1215px) {
+  .mainer .side-bar {
+    display: none;
+  }
+  .main {
+    max-width: 1073px;
+  }
   .main > .wrapper > div {
     margin: 7px auto;
     padding: 0;
   }
   .main > .header > .wrapper > .sub-wrap-2 .menu-pic {
-    width: 60px;
+    width: 40px;
     margin-left: 20px;
-  }
-  .main > .header:nth-child(1) > .wrapper > .sub-wrap-1 .login {
-    margin-right: 11px;
-  }
-  .main > .wrapper::before {
-    display: none;
-  }
-  .main > .wrapper::after {
-    display: none;
-  }
-  .main > .wrapper-2 > div {
-    margin: 10px auto;
   }
   .main > .wrapper-1 > div:nth-child(2) {
     display: none;
@@ -411,22 +435,6 @@
 @media only screen and (max-width: 360px) {
   .main {
     min-width: 360px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    overflow-x: scroll;
-  }
-  .main > div {
-    min-width: 335px;
-  }
-  .main > .wrapper > div:nth-child(3) {
-    display: none;
   }
   .main > .wrapper > div {
     margin: 7px auto;
@@ -434,8 +442,13 @@
   }
 }
 
-@media only screen and (min-width: 1012px) {
+@media only screen and (min-width: 1116px) {
   .main .header > .wrapper > .sub-wrap-2 .search-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .main > .wrapper > div:nth-child(3) {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -455,7 +468,10 @@
   }
 }
 
-@media only screen and (min-width: 1111px) {
+@media only screen and (min-width: 1215px) {
+  .mainer {
+    max-width: 1215px;
+  }
   .main {
     max-width: 1111px;
     margin: 0 auto;
