--- a/classwork/2020-11-16/styles/main.scss
+++ b/classwork/2020-11-16/styles/main.scss
@@ -1,3 +1,38 @@
+.mainer{
+    height: 1910px;
+    display: flex;
+    margin: 0 auto;
+}
+.side-bar{
+    width: 60px;
+    height: 100%;
+    position: relative;
+    display: flex;
+}
+.before{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 190px;
+    left: 10px;
+    border: 1px solid #E8E8EE;
+    background-image: url(../images/arrow-1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 3px;
+}
+.after{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 190px;
+    right: 10px;
+    border: 1px solid #E8E8EE;
+    background-image: url(../images/arrow-2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 3px;
+}
 .main{
     max-width: 1920px;
     height: 1910px;
@@ -18,6 +53,13 @@
 .wrapper{
     max-width: 1111px;
     height: 36px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.wrapper0{
+    max-width: 1215px;
+    height: auto;
     margin: 0 auto;
     display: flex;
     flex-wrap: nowrap;
@@ -93,6 +135,7 @@
         }
     }    
 }
+
 .main > .wrapper{
     margin: 0 auto;
     padding-top: 25px;
@@ -101,31 +144,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     position: relative;
-    &:before{
-        content: '';
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        top: 100px;
-        left: -50px;
-        border: 1px solid #E8E8EE;
-        background-image: url(../images/arrow-1.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        border-radius: 3px;
-    }
-    &:after{
-        content: '';
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        top: 100px;
-        right: -50px;
-        border: 1px solid #E8E8EE;
-        background-image: url(../images/arrow-2.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        border-radius: 3px;
+    & > div:nth-child(3){
+        display: none;
     }
     & > div{
         min-width: 357.88px;
@@ -158,6 +178,7 @@
         background-size: contain;
         background-repeat: no-repeat;
     }
+    
 }
 .line{
     margin: 27px auto;
@@ -254,31 +275,23 @@
         line-height: 2.7;
     }
 }
-@media only screen and (max-width: 1111px){
+@media only screen and (max-width: 1215px){
+    .mainer{
+        .side-bar{
+            display: none;
+        }
+    }
     .main {     
+        max-width: 1073px;
         & > .wrapper > div{
             margin: 7px auto;
             padding: 0;
         }
         & > .header > .wrapper > .sub-wrap-2{
             .menu-pic{
-                width: 60px;
+                width: 40px;
                 margin-left: 20px;
             }
-        }
-        & > .header:nth-child(1) > .wrapper > .sub-wrap-1{
-                .login{
-                    margin-right: 11px;
-                }
-            }
-        & > .wrapper::before{
-            display: none;
-        }
-        & > .wrapper::after{
-            display: none;
-        }
-        & > .wrapper-2 > div{
-            margin: 10px auto;
         }
         & > .wrapper-1 > div:nth-child(2){
             display: none;
@@ -295,30 +308,23 @@
     }
 }
 @media only screen and (max-width: 360px) {
-    .main { 
-        min-width: 360px;   
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        overflow-x: scroll;
-        & > div{
-            min-width: 335px;
-        }
-        & > .wrapper > div:nth-child(3){
-            display: none;
-        }
+    .main {  
+        min-width: 360px;
         & > .wrapper > div{
             margin: 7px auto;
             padding: 0;
         }
     }
 }
-@media only screen and (min-width: 1012px){
+@media only screen and (min-width: 1116px){
     .main{
         .header > .wrapper > .sub-wrap-2{
             .search-bar{
                 display: flex;
             }
+        }
+        & > .wrapper > div:nth-child(3){
+            display: flex;
         }
         .wrapper-1{
             & > div:nth-child(2){
@@ -333,7 +339,10 @@
         }
     }
 }
-@media only screen and (min-width: 1111px){
+@media only screen and (min-width: 1215px){
+    .mainer{
+        max-width: 1215px;
+    }
     .main{
         max-width: 1111px;
         margin: 0 auto;
