--- a/classwork/2020-11-16/styles/main.scss
+++ b/classwork/2020-11-16/styles/main.scss
@@ -89,7 +89,9 @@
         align-items: center;
         justify-content: space-between;
         .menu-pic{
-            width: 180px;
+            margin-left: 20px;
+            max-width: 180px;
+            min-width: 40px;
             height: 19px;
             background-image: url(../images/menu-options.png);
             background-repeat: no-repeat;
@@ -251,6 +253,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     .item{
+        margin: 0 auto;
         width: 253px;
         height: 400px;
         margin-bottom: 30px;
@@ -286,12 +289,6 @@
         & > .wrapper > div{
             margin: 7px auto;
             padding: 0;
-        }
-        & > .header > .wrapper > .sub-wrap-2{
-            .menu-pic{
-                width: 40px;
-                margin-left: 20px;
-            }
         }
         & > .wrapper-1 > div:nth-child(2){
             display: none;
