--- a/classwork/2020-11-16/styles/main.scss
+++ b/classwork/2020-11-16/styles/main.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
 }
 .side-bar{
-    width: 60px;
+    min-width: 0px;
     height: 100%;
     position: relative;
     display: flex;
@@ -14,7 +14,7 @@
     width: 30px;
     height: 30px;
     top: 190px;
-    left: 10px;
+    left: 0px;
     border: 1px solid #E8E8EE;
     background-image: url(../images/arrow-1.png);
     background-repeat: no-repeat;
@@ -26,7 +26,7 @@
     width: 30px;
     height: 30px;
     top: 190px;
-    right: 10px;
+    right: 0px;
     border: 1px solid #E8E8EE;
     background-image: url(../images/arrow-2.png);
     background-repeat: no-repeat;
@@ -85,7 +85,7 @@
         height: 100%;
         width: 100%;
         display: flex;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
         .menu-pic{
@@ -140,20 +140,19 @@
 
 .main > .wrapper{
     margin: 0 auto;
-    padding-top: 25px;
+    padding: 10px 10px;
     height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     position: relative;
-    & > div:nth-child(3){
-        display: none;
-    }
+    
     & > div{
         min-width: 357.88px;
         min-height: 169px;
         background-color: #FF9191;
         border-radius: 5px;
+        margin: 5px auto;
         color: white;
         h3, p{
             padding: 3px 3px 5px 20px;
@@ -284,44 +283,18 @@
             display: none;
         }
     }
-    .main {     
-        max-width: 1073px;
-        & > .wrapper > div{
-            margin: 7px auto;
-            padding: 0;
-        }
-        & > .wrapper-1 > div:nth-child(2){
-            display: none;
-        }
-        & > .wrapper-1{ 
-                .icons{
-                    display: flex;
-                    margin-right: 20px;
-                }
-                & > div:first-child{
-                    margin-left: 10px;
-                }
-        }
-    }
 }
-@media only screen and (max-width: 360px) {
-    .main {  
-        min-width: 360px;
-        & > .wrapper > div{
-            margin: 7px auto;
-            padding: 0;
+@media only screen and (max-width: 464px) {
+    .main{
+            min-width: 360px;
         }
-    }
 }
-@media only screen and (min-width: 1116px){
+@media only screen and (min-width: 1111px){
     .main{
         .header > .wrapper > .sub-wrap-2{
             .search-bar{
                 display: flex;
             }
-        }
-        & > .wrapper > div:nth-child(3){
-            display: flex;
         }
         .wrapper-1{
             & > div:nth-child(2){
@@ -338,7 +311,7 @@
 }
 @media only screen and (min-width: 1215px){
     .mainer{
-        max-width: 1215px;
+        max-width: 1200px;
     }
     .main{
         max-width: 1111px;
