--- a/classwork/2020-11-16/styles/main.css
+++ b/classwork/2020-11-16/styles/main.css
@@ -185,11 +185,12 @@
   line-height: 40px;
   text-align: center;
   color: #FFFFFF;
+  margin-right: 10px;
 }
 
 .main > .wrapper {
   margin: 0 auto;
-  padding: 10px 10px;
+  /* padding: 10px 10px; */
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -403,19 +404,22 @@
   line-height: 2.7;
 }
 
-@media only screen and (max-width: 1215px) {
+@media only screen and (max-width: 1190px) {
   .mainer .side-bar {
     display: none;
   }
 }
 
-@media only screen and (max-width: 464px) {
+@media only screen and (max-width: 400px) {
   .main {
     min-width: 360px;
   }
+  .main > .wrapper > div:nth-child(3) {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: 1111px) {
+@media only screen and (min-width: 1090px) {
   .main .header > .wrapper > .sub-wrap-2 .search-bar {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -436,7 +440,7 @@
   }
 }
 
-@media only screen and (min-width: 1215px) {
+@media only screen and (min-width: 1190px) {
   .mainer {
     max-width: 1200px;
   }
