--- a/classwork/2020-11-16/styles/main.scss
+++ b/classwork/2020-11-16/styles/main.scss
@@ -57,13 +57,6 @@
     display: flex;
     flex-wrap: nowrap;
 }
-.wrapper0{
-    max-width: 1215px;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: nowrap;
-}
 .sub-wrap-1{
     height: 100%;
     width: 100%;
@@ -286,8 +279,12 @@
     }
 }
 @media only screen and (max-width: 400px) {
+    .mainer{
+        flex-wrap: nowrap;
+        overflow-x: auto;
+    }
     .main{
-            min-width: 360px;
+        min-width: 360px;
         & > .wrapper > div:nth-child(3){
             display: none;
         }
