--- a/classwork/2020-11-16/styles/main.css
+++ b/classwork/2020-11-16/styles/main.css
@@ -267,6 +267,7 @@
 }
 
 .wrapper-1 > .icons {
+  margin-right: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -399,13 +400,19 @@
   }
 }
 
+@media only screen and (max-width: 430px) {
+  .main .wrapper > div:nth-child(3) {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 360px) {
   .main {
     min-width: 360px;
     overflow-x: auto;
   }
-  .main > .wrapper > div:nth-child(3) {
-    display: none;
+  .main > div {
+    min-width: 357.8px;
   }
 }
 
