--- a/classwork/2020-11-16/styles/main.scss
+++ b/classwork/2020-11-16/styles/main.scss
@@ -191,6 +191,7 @@
     justify-content: space-between;
     background-color: transparent;
     & > .icons{
+        margin-right: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -278,13 +279,21 @@
         }
     }
 }
+@media only screen and (max-width: 430px) {
+    .main{
+        .wrapper > div:nth-child(3){
+            display: none;
+            }
+        }
+
+}
 @media only screen and (max-width: 360px) {
     .main{
         min-width: 360px;
-        & > .wrapper > div:nth-child(3){
-            display: none;
-        }
         overflow-x: auto;
+        & > div{
+            min-width: 357.8px;
+        }
     }
 
 }
