--- a/classwork/2020-12-14/styles/main.css
+++ b/classwork/2020-12-14/styles/main.css
@@ -1,12 +1,88 @@
-.btn {
-  width: 50px;
-  color: white;
-  background-color: yellowgreen;
-  border: 1px solid green;
-  border-radius: 15px;
+.main {
+  display: -ms-grid;
+  display: grid;
+  background-color: cadetblue;
+      grid-template-areas: 'input1 input1 input1 input1 button5' 'button1 button2 button3 button4 button5' 'input2 input2 input2 input2 button5' 'div1 div1 div1 div1 div1';
+  grid-gap: 10px;
+  padding: 10px;
 }
 
-input, .output2 {
-  margin-top: 10px;
+.input1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: input1;
+}
+
+.btn1 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: button1;
+}
+
+.btn2 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: button2;
+}
+
+.btn3 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: button3;
+}
+
+.btn4 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 4;
+  grid-area: button4;
+}
+
+.btn5 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 5;
+  grid-area: button5;
+}
+
+.input2 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: input2;
+}
+
+.forth {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 5;
+  grid-area: div1;
+}
+
+.main > div {
+  border: 1px solid black;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.forth {
+  background-color: green;
+}
+
+.btn5 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.btn1, .btn2, .btn3, .btn4, .btn5 {
+  background-color: yellow;
 }
 /*# sourceMappingURL=main.css.map */
