--- a/classwork/2020-12-14/styles/main.scss
+++ b/classwork/2020-12-14/styles/main.scss
@@ -1,10 +1,36 @@
-.btn{
-    width: 50px;
-    color: white;
-    background-color: yellowgreen;
-    border: 1px solid green;
-    border-radius: 15px;
+.main{   
+    display: grid;
+    background-color: cadetblue;
+    grid-template-areas: 
+        'input1 input1 input1 input1 button5'
+        'button1 button2 button3 button4 button5'
+        'input2 input2 input2 input2 button5'
+        'div1 div1 div1 div1 div1';
+    grid-gap: 10px;
+    padding: 10px;
 }
-input, .output2{
-    margin-top: 10px;
+.input1 { grid-area: input1;}
+.btn1 { grid-area: button1;}
+.btn2 { grid-area: button2;}
+.btn3 { grid-area: button3;}
+.btn4 { grid-area: button4;}
+.btn5 { grid-area: button5;}
+.input2 { grid-area: input2;}
+.forth { grid-area: div1;}
+.main > div {
+    border: 1px solid black;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+.forth{
+ background-color: green;
+}
+.btn5{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn1, .btn2, .btn3, .btn4, .btn5 {
+    background-color: yellow;
 }
