--- a/homework/2020-12-21/styles/main.scss
+++ b/homework/2020-12-21/styles/main.scss
@@ -1,14 +1,16 @@
-@keyframes left {
-    0% { left: 650px;}
-    100% { left: 70px;}
-}
 @keyframes right {
-    0% { right: 650px;
+    0% { transform: rotateY(180deg);
+
+    }
+    100% { left: 1200px;
         transform: rotateY(180deg);
     }
-    100% {right: 70px;
-        transform: rotateY(180deg);
+}
+@keyframes left {
+    0% {
+        
     }
+    100% {left: 70px;}
 }
 .main{
     width: 1400px;
@@ -46,11 +48,14 @@
 .train{
     position: absolute;
     width: 260px;
+    left: 70px;
     height: 200px;
     background-image: url(../images/train3.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    animation: right 10s linear forwards;
+    animation-play-state: paused;
 }
 .light{
     visibility: hidden;
@@ -67,10 +72,12 @@
     background-repeat: no-repeat;
     transform: skew(0deg, -10deg);
     transform: rotateY(60deg);
+
 }
 .left{
-    animation: left 3s linear forwards;
+    animation: left 10s linear forwards;
 }
 .right{
-    animation: right 3s linear forwards;
+
+    animation: right 10s linear forwards;
 }
