--- a/classwork/2020-12-26/styles/main.css
+++ b/classwork/2020-12-26/styles/main.css
@@ -1,36 +1,32 @@
-@font-face {
-  font-family: 'fontello';
-  src: url("../fonts/font/fontello.woff");
+.main > div > div {
+  width: 50px;
+  height: 50px;
+  font-size: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid black;
 }
 
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+.main > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+.color {
+  background-color: orange;
 }
 
 .main {
-  width: 500px;
+  width: auto;
   height: 300px;
-  background-color: lightblue;
-  margin: 210px auto;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,101 +34,34 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  border-radius: 2%;
-  position: relative;
-}
-
-.countdown {
-  width: 400px;
-  height: 150px;
-  font-size: 60px;
-  margin: 0 auto;
-  border: 3px solid white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.timing {
-  width: 400px;
-  height: 50px;
-  margin: 0 auto;
+.btn {
+  width: 140px;
+  height: 40px;
+  background-color: brown;
+  color: white;
 }
 
-.timeset, .start {
-  width: 150px;
-  border: 3px solid white;
-}
-
-.timing {
+.wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-input[type=time] {
-  width: 100%;
-  font-size: 24px;
-  background-color: transparent;
-  border: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 6px 8px;
-}
-
-.btn, .play {
-  width: 100%;
-  height: 44px;
-  background-color: transparent;
-}
-
-.stop {
-  width: 100%;
-  height: 44px;
-  background-color: transparent;
-}
-
-input[type=time]:hover {
-  background-color: #8ddbf3;
-}
-
-button:hover {
-  background-color: #8ddbf3;
-}
-
-button:focus {
-  outline: none;
-}
-
-.circle-icon2 {
-  font-size: 6rem;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  top: 70px;
-  right: 90px;
-  background-image: url(../images/two.png);
-  background-position: center;
-  background-size: cover;
-  -webkit-animation: spin 2s infinite linear;
-          animation: spin 2s infinite linear;
-  display: inline-block;
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=main.css.map */
