--- a/classwork/2020-12-26/styles/main.scss
+++ b/classwork/2020-12-26/styles/main.scss
@@ -1,91 +1,35 @@
-@font-face {
-    font-family: 'fontello';
-    src: url('../fonts/font/fontello.woff');
-  }
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  .main {
-    width: 500px;
-    height: 300px;
-    background-color: lightblue;
-    margin: 210px auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    border-radius: 2%;
-    position: relative;
-  }
-  .countdown {
-    width: 400px;
-    height: 150px;
-    font-size: 60px;
-    margin: 0 auto;
-    border: 3px solid white;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-    box-sizing: border-box;
-  }
-  .timing {
-    width: 400px;
-    height: 50px;
-    margin: 0 auto;
-  }
-  .timeset, .start {
-    width: 150px;
-    border: 3px solid white;
-  }
-  .timing {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  input[type=time] {
-    width: 100%;
-    font-size: 24px;
-    background-color: transparent;
-    border: none;
-    box-sizing: border-box;
-    padding: 6px 8px;
-  }
-  .btn, .play {
-    width: 100%;
-    height: 44px;
-    background-color: transparent;
-  }
-  .stop {
-    width: 100%;
-    height: 44px;
-    background-color: transparent;
-  }
-  input[type=time]:hover {
-    background-color: #8ddbf3;
-  }
-  button:hover {
-    background-color: #8ddbf3;
-  }
-  button:focus {
-    outline: none;
-  }
-
-  .circle-icon2 {
-    font-size: 6rem;
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    top: 70px;
-    right: 90px;
-    background-image: url(../images/two.png);
-    background-position: center;
-    background-size: cover;
-    animation: spin 2s infinite linear;
-    display: inline-block;
-    animation-play-state: paused;
-  } 
+.main > div > div{
+  width:50px;
+  height: 50px;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  border: 1px solid black;
+}
+.main > div{
+  display: flex;
+}
+.color{
+  background-color: orange;
+}
+.main{
+  width: auto;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.btn{
+  width: 140px;
+  height: 40px;
+  background-color: brown;
+  color: white;
+}
+.wrapper{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
