--- a/classwork/2020-12-26/styles/main.scss
+++ b/classwork/2020-12-26/styles/main.scss
@@ -10,12 +10,17 @@
 .main > div{
   display: flex;
 }
+.wrap{
+  margin-top: 20px;
+  padding: 0;
+}
 .color{
   background-color: orange;
 }
 .main{
   width: auto;
-  height: 300px;
+  margin: 20px;
+  height: 260px;
   display: flex;
   flex-direction: column;
   align-items: center;
