--- a/homework/2021-01-07/styles/main.css
+++ b/homework/2021-01-07/styles/main.css
@@ -106,6 +106,18 @@ html, body {
   color: white;
 }
 
+.input-cols {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: 32px;
+  top: 5px;
+  font-size: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .close {
   color: white;
   position: absolute;
