--- a/classwork/2021-01-11/styles/main.css
+++ b/classwork/2021-01-11/styles/main.css
@@ -59,7 +59,7 @@ html, body {
 .cards {
   width: 60px;
   height: 60px;
-  border: 1px solid silver;
+  border: 1px solid green;
   position: relative;
 }
 
