--- a/classwork/2021-01-11/styles/main.scss
+++ b/classwork/2021-01-11/styles/main.scss
@@ -34,7 +34,7 @@ html, body{
 .cards{
   width: 60px;
   height: 60px;
-  border: 1px solid green;
+  border: 1px solid silver;
   position: relative;
 }
 .cards > div{
